Fixed background display on mobile devices and changed scrolling styles

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -54,23 +54,22 @@
     position: fixed;
     inset: 0;
     z-index: -1000;
-    background: url("https://c.wallhere.com/photos/a3/43/mountains_high_snow-988481.jpg!d") center center / cover no-repeat fixed;
+    background: fixed, url("https://c.wallhere.com/photos/a3/43/mountains_high_snow-988481.jpg!d") center/cover no-repeat;
     filter: blur(2px);
     -webkit-filter: blur(2px);
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #707070;
-    border-radius: 5px;
+    background: #065592;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #7AF2C9;
-    border-radius: 5px;
+    background: #FFFFFF;
+    border-radius: 10px;
 }
 
 
